@@ -35,7 +35,7 @@
 <div id="ps-overall-menu">
 <div id="ps-menu-right">
 <!--#SEASONS_H_DROPDOWN#-->
-{if $basename != 'awards' and $basename != 'credits' and $basename != 'help' and $basename != 'login' and $basename != 'logout' and $basename != 'privacy' and $basename != 'themes' and !$maintenance or psss_user_is_admin() and $season_c or isset($seasons_h)}
+{if $basename != 'awards' and $basename != 'credits' and $basename != 'help' and $basename != 'login' and $basename != 'logout' and $basename != 'privacy' and $basename != 'team' and $basename != 'themes' and !$maintenance or psss_user_is_admin() and $season_c or isset($seasons_h)}
 <form method="post">
 <div id="ps-seasons_h-dropdown">
 	<label>Historical Seasons:</label>
